2007-02-21	kaffeetisch

	Merge from HEAD:

	* t/GtkTreeModelSort.t, xs/GtkTreeModelSort.xs: fix copy and paste
	error that made gtk_tree_model_sort_convert_child_iter_to_iter()
	unusable.  Reported by Adrian Priscak.  Also, make sure we got it
	right this time.

2007-01-21	kaffeetisch

	* Gtk2.pm, NEWS, README, copyright.pod: Stable release 1.142.

2007-01-08	kaffeetisch

	Merge from HEAD:

	* t/GtkIconView.t, xs/GtkIconView.xs: Fix the path handling in
	Gtk2::IconView::get_selected_items.  Previously, the returned
	paths were pointing to dead memory and any attempt to use them
	caused havoc.

	* xs/GtkRecentManager.xs: Add more documentation for the
	Gtk2::RecentManager::add_item and Gtk2::RecentManager::add_full
	methods; define the needed keys for the hashref to be passed
	to the add_full method.

2006-12-30	kaffeetisch

	Merge from HEAD:

	* GtkTreeSortable.xs: Don't segfault in the GET_SORT_COLUMN_ID
	marshaller if any of the output parameter pointers is NULL.  Patch
	by muppet.

2006-11-19	kaffeetisch

	* Gtk2.pm, NEWS, README: Stable release 1.141.

2006-11-19	kaffeetisch

	Merge from HEAD:

	* doctypes: List GdkPixbufFormat as "hash reference".

	* t/PangoCairo.t, xs/PangoCairo.xs: Also allow using method
	calling semantics for pango_cairo_context_*.

	* t/GdkVisual.t, t/GtkIconView.t, t/GtkRecentChooser.t,
	t/GtkRecentManager.t: Fix test failures.

2006-11-08	kaffeetisch

	Merge from HEAD:

	* t/GtkEntry.t, xs/GtkEntry.xs: Allow passing undef to
	set_completion.

2006-10-03	kaffeetisch

	* pm/SimpleList.pm: Don't use =cut ... =cut comment blocks.
	They're invalid POD.

	* xs/GtkSelection.xs, xs/PangoTypes.xs: Don't clobber the Gtk2 and
	Gtk2::Pango man pages with POD.

2006-09-13	kaffeetisch

	* Makefile.PL (find_extra_libs): Also look for Cairo.lib to make
	linking work on win32.

2006-09-10	kaffeetisch

	* t/02.GtkContainer.t, t/GtkBin.t: Remove the noinit flag, since
	these tests apparently need an initialized gtk+ now.
